# Albatross

./: .gitignore  CMakeLists.txt  README.md  albatross_scrolls.txt  board.cpp  board.h  constants.h  dynamic_evaluator.cpp  dynamic_evaluator.h  evaluation.cpp  evaluation.h  evaluation_consts.h  init.cpp  init.h  magic_bitboard.cpp  magic_bitboard.h  main.cpp  move.cpp  move.h  move_picker.cpp  move_picker.h  movegen.cpp  movegen.h  repetition_table.cpp  repetition_table.h  search_classes.cpp  search_classes.h  search_launcher.cpp  search_launcher.h  searcher.cpp  searcher.h  transposition_table.cpp  transposition_table.h  types.h  uci_interaction.cpp  uci_interaction.h  utils.h  zobrist_hash.cpp  zobrist_hash.h
